--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -2012,6 +2012,54 @@
   "page.year-in-review.2023.section.big-impact.wellness-survey.heading": {
     "message": "<no-localization>VH’s</no-localization> Wellness Survey"
   },
+  "page.year-in-review.2023.section.by-the-numbers.cost-saved.1": {
+    "message": "Minimum"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.cost-saved.2": {
+    "message": "On Average"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.cost-saved.3": {
+    "message": "Maximum"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.cost-saved.heading": {
+    "message": "Saved for the Movement"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.grant-program.1": {
+    "message": "Applicants"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.grant-program.2": {
+    "message": "Applications approved"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.grant-program.3": {
+    "message": "Given in seed grants"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.grant-program.heading": {
+    "message": "<b>Grant</b> Program"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.heading": {
+    "message": "<b>By the numbers</b>"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.services.1": {
+    "message": "BIPGM-led"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.services.1.tooltip": {
+    "message": "BIPGM stands for Black, Indigenous, and People of the Global Majority."
+  },
+  "page.year-in-review.2023.section.by-the-numbers.services.2": {
+    "message": "EA-aligned"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.services.2.tooltip": {
+    "message": "EA stands for Effective Altruism – groups who are focused on animal welfare."
+  },
+  "page.year-in-review.2023.section.by-the-numbers.services.3": {
+    "message": "Different countries"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.services.4": {
+    "message": "Services provided"
+  },
+  "page.year-in-review.2023.section.by-the-numbers.services.heading": {
+    "message": "Organizations Served"
+  },
   "page.year-in-review.2023.section.collaborations.1.content": {
     "message": "This year, we partnered with <no-localization>AAC</no-localization> by winding down their skilled volunteer board's activities and guiding those eager to volunteer or seeking volunteer positions towards <no-localization>VH Playground</no-localization>. Likewise, <no-localization>Playground</no-localization> began to advocate <no-localization>AAC's</no-localization> career opportunities within our volunteer community for individuals aspiring to pursue a more career-oriented role."
   },
@@ -2122,6 +2170,15 @@
   },
   "page.year-in-review.2023.section.leadership.label": {
     "message": "Read the Announcement"
+  },
+  "page.year-in-review.2023.section.moving-forward.btn.cta": {
+    "message": "Support our work"
+  },
+  "page.year-in-review.2023.section.moving-forward.content": {
+    "message": "2023 was a year of development and transformation for our organization. We enhanced our capacity-building services by embracing new leadership roles and preparing our design team to branch out into a sister organization. Our newly launched tools quickly stood out, earning recognition and proving their worth by streamlining funding processes and mobilizing major funders in the space. We kicked off exciting new projects and mapped out our priorities for the ones ahead. Our visibility grew through leading talks at conferences, appearances in documentary credits, and numerous collaboration requests. Looking forward, we aim to broaden the array of groups we support through capacity building, propel organizational growth, and continuously improve our built tools for greater impact. We are immensely grateful to all our supporters and are excited to see where 2024 takes us next."
+  },
+  "page.year-in-review.2023.section.moving-forward.heading": {
+    "message": "Forward & Onward"
   },
   "page.year-in-review.2023.section.partnership.content": {
     "message": "Creating <b>partnerships</b> & creating <b>impact</b>"
