--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -2109,7 +2109,7 @@
     "message": "Serving Our Movement with New Tools & Technology"
   },
   "page.year-in-review.2023.section.knowledge.aquatic-life-con.content": {
-    "message": "CONTENT NEEDED"
+    "message": "At the 4th <no-localization>Annual Aquatic Life Conference</no-localization>, organized by the <no-localization>Aquatic Life Institute</no-localization>, our Executive Director <no-localization>James Morgan</no-localization> discussed using <no-localization>ChatGPT</no-localization> for aquatic life protection. In his talk, <no-localization>James</no-localization> outlined AI definitions, its opportunities in animal advocacy, and the risks and limitations associated with AI use. You can watch the talk <a>right here</a>."
   },
   "page.year-in-review.2023.section.knowledge.aquatic-life-con.heading": {
     "message": "Leveraging AI for Aquatic Animals: <b>Aquatic Life Conference</b>"
