--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -665,6 +665,15 @@
   "page.newsletter.next-seo.title": {
     "message": "Our Newsletter"
   },
+  "page.not-found.contact.contact-page-error.cta-email": {
+    "message": "Please contact us at"
+  },
+  "page.not-found.contact.cta-button.label": {
+    "message": "Let us know!"
+  },
+  "page.not-found.contact.cta-label": {
+    "message": "If you believe this is a mistake"
+  },
   "page.not-found.error-message": {
     "message": "The page you requested does not exist"
   },
