--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -2145,7 +2145,7 @@
     "message": "<b>MAKING DAILY ACTIVISM FUN</b>"
   },
   "page.year-in-review.2023.section.fta.label": {
-    "message": "Head to <no-localization>Today For Animals</no-localization>"
+    "message": "Besuchen Sie <no-localization>Today For Animals</no-localization>"
   },
   "page.year-in-review.2023.section.granti.content": {
     "message": "After conducting several interviews with major funders in the space, it was clear to us that a grantee/funder tool was well-needed in our movement. We tackled this issue head-on by building a tool that would allow better management and facilitation of grants for both advocates and funders alike. We were thrilled to onboard the first funders onto the platform, and publicly announced its launch at the end of the year!<no-localization>{break}{break}</no-localization>Grantees often struggle to keep track of their grant submissions, both current and past. Funders face similar challenges, as it's rare to have all the necessary information in one easy-to-understand and accessible format. Like grantees, funders deal with a lot of administrative work and often use multiple platforms to manage submissions. Our system, <no-localization>Granti</no-localization>, brings everyone together, simplifying the grant process for all.<no-localization>{break}{break}</no-localization>Since its launch, <no-localization>Granti</no-localization> has made a huge impact, helping distribute tens of millions of dollars. <no-localization>Granti</no-localization> makes everything easier—from handling applications to updating records and managing finances. It's become a powerful tool, and we intend to extend its use far beyond what we initially envisioned.<no-localization>{break}{break}</no-localization><b>Are you a funder or grantmaker in the space? Looking for a streamlined way to manage your grants?</b>"
@@ -2250,7 +2250,7 @@
     "message": "Creating <b>partnerships</b> & creating <b>impact</b>"
   },
   "page.year-in-review.2023.section.playground.content": {
-    "message": "After the immense success of <no-localization>Playground</no-localization> since its launch in 2021, we continued to strive for ways to improve it. The platform, comprising over 2,500 vegan volunteers who have collectively contributed over thousands of hours of work for the movement, has established itself as the go-to place to connect with organizations.<no-localization>{break}{break}</no-localization>We witnessed the growth of <no-localization>Playground’s</no-localization> community by nearly 1,000 new volunteers, handling 93 diverse requests like data analysis and marketing in this year alone.<no-localization>{break}{break}</no-localization>In 2023, we decided to take <no-localization>Playground</no-localization> to the next level. We learned a lot and started working on implementing changes to enhance user experience. By providing more control for those seeking support, and a much more enjoyable (and even fun!) process for fulfilling requests, <no-localization>Playground's</no-localization> upgrade is set to boost both experience and impact for animals.<no-localization>{break}{break}</no-localization><no-localization>Playground</no-localization> is separate from the <no-localization>Vegan Hacktivists</no-localization> team, and aims to increase the capacity in which we can support work for the animals. In preparation of <no-localization>Playground V2</no-localization>, we’ve released an introductory video about the current platform.<no-localization>{break}{break}</no-localization><b>Haven’t seen the video yet?</b>"
+    "message": "After the immense success of <no-localization>Playground</no-localization> since its launch in 2021, we continued to strive for ways to improve it. The platform, comprising over 2,500 vegan volunteers who have collectively contributed over thousands of hours of work for the movement, has established itself as the go-to place to connect with organizations.<no-localization>{break}{break}</no-localization>We witnessed the growth of <no-localization>Playground’s</no-localization> community by nearly 1,000 new volunteers, handling 93 diverse requests like data analysis and marketing in this year alone.<no-localization>{break}{break}</no-localization>In 2023, we decided to take <no-localization>Playground</no-localization> to the next level. We learned a lot and started working on implementing changes to enhance user experience. By providing more control for those seeking support, and a much more enjoyable (and even fun!) process for fulfilling requests, <no-localization>Playground's</no-localization> upgrade is set to boost both experience and impact for animals.<no-localization>{break}{break}</no-localization><no-localization>Playground</no-localization> is separate from the <no-localization>Vegan Hacktivists</no-localization> team, and aims to increase the capacity in which we can support work for the animals. In preparation of <no-localization>Playground V2</no-localization>, we’ve released an introductory video about the current platform. <no-localization>{break}{break}</no-localization> <b>Haven’t seen the video yet?</b>"
   },
   "page.year-in-review.2023.section.playground.heading": {
     "message": "<b>FROM STRENGTH TO STRENGTH</b>"
@@ -2258,11 +2258,20 @@
   "page.year-in-review.2023.section.playground.label": {
     "message": "Watch it here"
   },
+  "page.year-in-review.2023.section.providing-value.we-built.header": {
+    "message": "We built projects to <b>grow and expand the movement</b>"
+  },
   "page.year-in-review.2023.section.providing-value.we-built.paragraph": {
     "message": "<b>2023 was the year we finalized projects long awaiting their spotlight.</b> We targeted vegans eager to get active for animals in their everyday lives and launched a tool that transformed grantmaking processes crucial for organizations to sustain and advance their work."
   },
+  "page.year-in-review.2023.section.providing-value.we-committed.header": {
+    "message": "We committed to <b>major changes</b> within our org"
+  },
   "page.year-in-review.2023.section.providing-value.we-committed.paragraph": {
     "message": "<b>With shifts in our leadership and plans for new programs</b>, we dived into a new chapter at <no-localization>VH</no-localization>. This entailed welcoming a new Executive Director for <no-localization>VH</no-localization>, as well as preparing for the evolution of one of our teams into a realm of stronger branding and focus."
+  },
+  "page.year-in-review.2023.section.providing-value.we-ventured.header": {
+    "message": "We ventured out to <b>share what we know</b>"
   },
   "page.year-in-review.2023.section.providing-value.we-ventured.paragraph": {
     "message": "<b>We leaned into our strength of harnessing technology and building communities</b> to help animals, and shared our expertise across a multitude of events. From speaking about volunteer management to leading talks on utilizing AI in advocacy work, we stepped forward to ensure that more organizations could use this knowledge for change."
