update blogentries section text

--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -2226,7 +2226,7 @@
     "message": "On the <b>BLOG</b>"
   },
   "section.blog-teaser.paragraph": {
-    "message": "Read our blog post for project updates, announcements, interviews, guest editorials, and much more."
+    "message": "Read our blog for useful tips, project updates, announcements, and much more."
   },
   "section.contact-us-form.input-field.empty-error.email": {
     "message": "The email is required"
