update our mission page

--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -87,7 +87,7 @@
     "message": "Data-Driven Activism"
   },
   "page.about.section.navigation.button.label.mission": {
-    "message": "OUR MISSION"
+    "message": "OUR MISSION, VISION"
   },
   "page.about.section.navigation.button.label.story": {
     "message": "OUR STORY"
@@ -96,16 +96,16 @@
     "message": "OUR VALUES"
   },
   "page.about.section.our-mission.next-seo.title": {
-    "message": "Our Mission"
+    "message": "Our Mission, Vision"
   },
   "page.about.section.our-mission.section-header.content": {
-    "message": "Our mission is to build data-driven, disruptive, and innovative projects to help see an end to animal exploitation. We believe the animal protection movement has five fundamental areas for improvement, which we aim to solve through our work."
-  },
-  "page.about.section.our-mission.section-header.heading": {
-    "message": "Our <b>mission</b>"
+    "message": "We empower animal protection organizations worldwide by providing expert capacity-building services – including technology, creative, and advisory support – at no cost, enabling them to amplify their impact and drive positive change for animals around the world."
   },
   "page.about.section.our-mission.section-header.image.alt-text": {
     "message": "Our mission"
+  },
+  "page.about.section.our-mission.section-header.vision.content": {
+    "message": "A world where every animal protection organization has the tools and support needed to effectively advocate for animals, fostering a global culture of compassion and respect for all living beings."
   },
   "page.about.section.our-mission.subsection-0.heading": {
     "message": "1. We need more data in our movement."
