--- a/translation/data/en.json
+++ b/translation/data/en.json
@@ -488,62 +488,44 @@
   "page.join.next-seo.title": {
     "message": "Join Us"
   },
-  "page.join.section.available-positions.headline": {
-    "message": "Available Positions"
+  "page.join.section.join-our-team.cta": {
+    "message": "Head to Playground"
   },
-  "page.join.section.job-roles.description.0": {
-    "message": "Write quality, clean code for projects at various stages of development. We use Laravel for most projects, and expect you to be familiar or interested in levelling up in PHP, JS, and CSS."
-  },
-  "page.join.section.job-roles.description.1": {
-    "message": "Define the user's experience and interface for our projects by producing modern, visually-appealing web designs—from wireframes and mockups to the app's final look and feel."
-  },
-  "page.join.section.job-roles.description.2": {
-    "message": "Craft our voice and brand on social media, whether it's through developing content strategy, analyzing engagement data, or interacting with followers."
-  },
-  "page.join.section.job-roles.description.3": {
-    "message": "Produce original and well-written content for a variety of medium—our blog, newsletter, social media, software copy, and more."
-  },
-  "page.join.section.job-roles.description.4": {
-    "message": "Apply to join our design team at Violet Studios, our sister organization for graphic design and branding."
-  },
-  "page.join.section.job-roles.title.0": {
-    "message": "Developers"
-  },
-  "page.join.section.job-roles.title.1": {
-    "message": "UI/UX Designers"
-  },
-  "page.join.section.job-roles.title.2": {
-    "message": "Social Media Manager"
-  },
-  "page.join.section.job-roles.title.3": {
-    "message": "Writers"
-  },
-  "page.join.section.job-roles.title.4": {
-    "message": "Graphic Designers"
-  },
-  "page.join.section.join-our-team.footer": {
-    "message": "Our team uses Discord for internal communication, Trello for project and task workflow, Figma for designing, and GitHub for code management and collaboration."
+  "page.join.section.join-our-team.cta-browse-requests": {
+    "message": "Browse available requests"
   },
   "page.join.section.join-our-team.headline": {
-    "message": "Join <b>our team</b>"
+    "message": "Use your skills to help animals"
   },
-  "page.join.section.join-our-team.subline": {
-    "message": "We are growing! If you believe in our mission and want to help animals through technology, join us. Even if you do not meet all qualifications, we encourage you to apply anyway."
+  "page.join.section.join-our-team.paragraph.0": {
+    "message": "You want to do more for animals – and you’re not alone. Maybe you’ve been looking for a way to team up with like-minded people who share your values. Maybe you're ready to take the next step but haven’t found the right opportunity. Or maybe you know exactly what you’re capable of, and you’re just waiting for the moment to use your skills where they matter most – fighting for a better world for animals."
+  },
+  "page.join.section.join-our-team.paragraph.1": {
+    "message": "<b>Playground</b> is our platform where mission-aligned people like you use their skills to make a difference – and collaborate with professional animal advocates and organizations all around the world."
+  },
+  "page.join.section.join-our-team.paragraph.2": {
+    "message": "If you are:"
+  },
+  "page.join.section.join-our-team.paragraph.3": {
+    "message": "Then this is your place."
+  },
+  "page.join.section.join-our-team.paragraph.4": {
+    "message": "Browse available requests and leverage your skills for animals."
+  },
+  "page.join.section.join-our-team.paragraph.5": {
+    "message": "There’s an endless need for skilled support in the animal advocacy movement, with countless requests coming in, each reflecting the movement’s diverse needs. While we can’t fulfill them all, we created Playground to help the movement achieve more – together with incredible volunteers like you."
+  },
+  "page.join.section.join-our-team.paragraph.6": {
+    "message": "<b>Playground</b> is a VH program designed to support the high volume of requests from advocates and organizations around the world."
+  },
+  "page.join.section.join-our-team.paragraph.7": {
+    "message": "When you volunteer through Playground, you create a tangible impact for animals, advance your expertise in the movement, and collaborate on projects that align with your skills and passions."
   },
   "page.join.section.open-positions.cta": {
     "message": "Apply Now"
   },
   "page.join.section.open-priority-positions.cta": {
     "message": "Apply Now"
-  },
-  "page.join.section.other-roles.content": {
-    "message": "Don't see a role that matches your skills? Reach out to us anyway. We'd love to get to know you and appreciate your interest in supporting us!"
-  },
-  "page.join.section.other-roles.cta": {
-    "message": "Apply Now"
-  },
-  "page.join.section.other-roles.headline": {
-    "message": "Other Talents & Specialists"
   },
   "page.join.section.playground.content": {
     "message": "Don't have the time to regularly volunteer with us? We've launched an open-source, public community called <b>VH: Playground</b>, which has an upward of 1,000 members on Discord! Pick up a project offered by organizations whenever you're available."
@@ -554,41 +536,14 @@
   "page.join.section.playground.headline": {
     "message": "Attention Developers!"
   },
-  "page.join.section.priority-positions.headline": {
-    "message": "High Priority Positions"
-  },
-  "page.join.section.priority-positions.subline": {
-    "message": "We're actively seeking skilled volunteers to fulfill the following positions:"
-  },
-  "page.join.section.priority-roles.description.0": {
-    "message": "Recruit, onboard, and engage our growing VH community on Discord. Candidate will host events, facilitate interactions, and support our growing community of volunteers."
-  },
-  "page.join.section.priority-roles.description.1": {
-    "message": "Manage and oversee grantwriting and fundraising pipeline. Candidate must exemplify strong organizational and writing skills, with excellent grammar and spelling."
-  },
-  "page.join.section.priority-roles.description.2": {
-    "message": "Support our advertising efforts, including developing campaigns, manage budgets, and analyzing metrics. Candidate should have a background in marketing, media or advertising."
-  },
-  "page.join.section.priority-roles.title.0": {
-    "message": "Community Manager"
-  },
-  "page.join.section.priority-roles.title.1": {
-    "message": "Grant Writer"
-  },
-  "page.join.section.priority-roles.title.2": {
-    "message": "Ads Manager"
-  },
   "page.join.section.requirements.0": {
-    "message": "Commitment to a vegan lifestyle"
+    "message": "Committed to a vegan lifestyle"
   },
   "page.join.section.requirements.1": {
-    "message": "Professional experience in your field"
+    "message": "Eager to work with advocates and organizations on projects that align with your passions"
   },
   "page.join.section.requirements.2": {
-    "message": "Portfolio, resume, or work product to demonstrate experience"
-  },
-  "page.join.section.requirements.3": {
-    "message": "Ability to volunteer at least 5 hours a week"
+    "message": "Able to show your skills through a portfolio, resume, or past work"
   },
   "page.newsletter.next-seo.title": {
     "message": "Our Newsletter"
